     mechanism and applied to other CAs as well, but it was most visible in the
     Micro AIs.
   * Some internal reorganization of Micro AI code to facilitate customizing
     them for UMC and adding functionality from other versions of Wesnoth. Some
     code cleanup for consistency, readability and speed, as well as fixing of
     some minor and subtle bugs.
 * Campaigns:
   * Changed all occurrences of {FLAG_VARIANT ragged} to {FLAG_VARIANT6 ragged}
   * Eastern Invasion:
     * In 'Captured', stolen gold won't be mentioned if the player had no
       carryover gold.
   * Son of the Black Eye: some minor changes
     * S2: adjusted starting villages; scenario now ends if Kapou'e is already
       on the signpost when the messenger comes back
     * S3: make objectives consistent between before and after trolls appear
     * S6: remove AI controller.  It doesn't work with sides without a leader
     * Minor balance tweaks to scenarios 7, 8, 12, 14, 15, 17 and 18.
   * The Hammer of Thursagan:
     * Fixed missing objective in 'The Court of Karrag'.
     * Rebalanced scenarios 'Invaders', Mages and Drakes' and 'Fear'.
 * C++ Engine:
   * Purge "human_ai" controller type. This is a fixup of bugfix #18829 below.
 * Language and i18n:
   * Updated translations: Czech, French, German, Greek, Hungarian, Italian,
     Lithuanian, Scottish Gaelic, Slovak
 * Lua API:
   * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when
     the table returned by the user-specified function is not completely valid,
     when wesnoth is running in debug mode (--debug command line flag).
 * Graphics:
   * Smooth unit movement over terrain with elevation (e.g. keeps/bridges)
   * Fixed bug #22045: Only blit neutral surfaces.
 * Units:
   * Increased the experience requirement for the Rami from 32 to 39
   * Increased the experience requirement for the Saree from 56 to 64
   * Changed sound timings for Khalifate melee attacks